refactored running code. fixed issue with dataset processing

--- a/experiments/pinball_simple/config/config.yaml
+++ b/experiments/pinball_simple/config/config.yaml
@@ -7,7 +7,7 @@ batch_size: 32
 epochs: 10
 accelerator: cpu
 devices: 1
-save_path: mdps
+save_path: ${experiment_cwd}/mdps
 loss:
   grounding_const: 10
   kl_const:  0.1
