--- a/experiments/pb_obstacles/pixel/config/models/decoder_pixelcnn.yaml
+++ b/experiments/pb_obstacles/pixel/config/models/decoder_pixelcnn.yaml
@@ -5,11 +5,13 @@ features:
   out_width: 100
   out_height: 100
   out_channels: 16
-  color_channels: 3 # 3 for RGB, 1 for grayscale
+  color_channels: 1 # 3 for RGB, 1 for grayscale
 dist:
   type: pixelcnn
   in_channels: ${model.decoder.features.color_channels} 
   color_channels: ${model.decoder.features.color_channels} 
   feats_maps: ${model.decoder.features.out_channels}
   kernel_size: 7
-  n_layers: 5
+  n_layers: 20
+  out_width: 100
+  out_height: 100
