--- a/experiments/pb_obstacles/fullstate/config/config.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config.yaml
@@ -5,7 +5,7 @@ experiment_cwd: 'experiments/pb_obstacles/fullstate'
 lr: 1e-4
 batch_size: 128
 epochs: 10
-accelerator: cpu
+accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
@@ -14,19 +14,25 @@ loss:
   reward_const: 1.
   transition_const: 0.1
   init_class_const: 1.
+  kl_balance: 0.01
   n_samples: 1
 data:
   data_path: ${experiment_cwd}/data/obstacles.pt
-  batch_size: 32
+  batch_size: 128
   num_workers: 4
-  train_split: 0.9
+  train_split: 0.8
   val_split: 0.1
-  test_split: 0.
+  test_split: 0.1
   shuffle: True  
+  n_reward_samples: 5
   n_options: ${model.n_options}
+  n_out_feats: 20
+  state_dim : 4
+  obs_type: simple
+  gamma: 0.99
 model:
   n_options: 4
-  obs_dims: 4
+  obs_dims: ${data.n_out_feats}
   latent_dim: 2
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
