--- a/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
@@ -1,12 +1,14 @@
 features:
   type: mlp
   input_dim: ${model.obs_dims}
-  output_dim: ${eval:${model.latent_dim} * 2}
+  output_dim: 64
   hidden_dims:
   - 128
-  activation: relu
+  - 64
+  activation: gelu
 dist:
   type: diag_gaussian
+  input_dim: ${model.encoder.features.output_dim}
   output_dim: ${model.latent_dim}
-  min_var: 1.0e-06
-  max_var: 1000000.0
+  min_std: 1.0e-06
+  max_std: 0.5
