--- a/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
@@ -5,10 +5,10 @@ features:
   hidden_dims:
   - 128
   - 64
-  activation: gelu
+  activation: relu
 dist:
   type: diag_gaussian
   input_dim: ${model.encoder.features.output_dim}
   output_dim: ${model.latent_dim}
-  min_std: 1.0e-06
-  max_std: 0.5
+  min_std: 100
+  max_std: 1000
