vae trainer working in full-state-no-obstacles

--- a/experiments/pb_no_obs/fullstate/config/config.yaml
+++ b/experiments/pb_no_obs/fullstate/config/config.yaml
@@ -2,32 +2,34 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_no_obs/fullstate'
-lr: 1e-4
-batch_size: 128
-epochs: 50
+lr: 0.0038263869045413275
+batch_size: 256
+epochs: 10
 accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
-  grounding_const: 10
-  kl_const:  0.1
-  reward_const: 0.
-  transition_const: 0.1
-  init_class_const: 0.
-  kl_balance: 0.01
+  grounding_const: 1. #99.03164077159823
+  kl_const: 0 #0.3589425248337221
+  reward_const: 0.0
+  transition_const: 1. #5.263095635338799
+  init_class_const: 0.0
+  kl_balance: 0.
   n_samples: 1
 data:
   data_path: ${experiment_cwd}/data/no_obs.pt
-  batch_size: 32
+  batch_size: ${batch_size}
   num_workers: 4
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
-  shuffle: True
-  obs_type: simple
+  shuffle: True  
   n_reward_samples: 5
-  gamma: 0.99
   n_options: ${model.n_options}
+  n_out_feats: 4
+  state_dim : 4
+  obs_type: simple
+  gamma: 0.99
 model:
   n_options: 4
   obs_dims: 4
