--- a/experiments/pb_no_obs/fullstate/config/models/transition_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/transition_mlp.yaml
@@ -4,6 +4,7 @@ features:
   n_options: ${model.n_options}
   hidden_dims:
   - 128
-  activation: relu
+  - 128
+  activation: gelu
 dist:
   type: deterministic
