--- a/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
@@ -3,10 +3,12 @@ features:
   input_dim: ${model.latent_dim}
   output_dim: ${eval:${model.obs_dims}*2}
   hidden_dims:
-  - 64
-  activation: relu
+  - 128
+  - 128
+  activation: gelu
 dist:
   type: diag_gaussian
   output_dim: ${model.obs_dims}
-  min_var: 1e-3
-  max_var: 1e6
+  input_dim: ${model.decoder.features.output_dim}
+  min_std: 1e-10
+  max_std: 1000000
