--- a/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
@@ -4,9 +4,11 @@ features:
   output_dim: ${eval:${model.latent_dim} * 2}
   hidden_dims:
   - 128
-  activation: relu
+  - 128
+  activation: gelu
 dist:
   type: diag_gaussian
   output_dim: ${model.latent_dim}
-  min_var: 1.0e-06
-  max_var: 1000000.0
+  input_dim: ${model.encoder.features.output_dim}
+  min_std: 1.0e-15
+  max_std: 1000000.0
