--- a/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
@@ -3,12 +3,10 @@ features:
   input_dim: ${model.latent_dim}
   output_dim: ${eval:${model.obs_dims}*2}
   hidden_dims:
-  - 128
-  - 128
-  activation: gelu
+  - 64
+  activation: relu
 dist:
   type: diag_gaussian
   output_dim: ${model.obs_dims}
-  input_dim: ${model.decoder.features.output_dim}
-  min_std: 1e-10
-  max_std: 1000000
+  min_var: 1e-3
+  max_var: 1e6
