--- a/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
@@ -4,11 +4,9 @@ features:
   output_dim: ${eval:${model.latent_dim} * 2}
   hidden_dims:
   - 128
-  - 128
-  activation: gelu
+  activation: relu
 dist:
   type: diag_gaussian
   output_dim: ${model.latent_dim}
-  input_dim: ${model.encoder.features.output_dim}
-  min_std: 1.0e-15
-  max_std: 1000000.0
+  min_var: 1.0e-06
+  max_var: 1000000.0
