--- a/experiments/pb_obstacles/fullstate/config/config_iaf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_iaf.yaml
@@ -1,11 +1,11 @@
 # Config file for Pinball environment
 # Full State observation
 # Gridworld abstraction
-experiment_cwd: 'experiments/pb_no_obs/fullstate'
+experiment_cwd: 'experiments/pb_obstacles/fullstate'
 lr: 1e-4
 batch_size: 128
 epochs: 10
-accelerator: mps
+accelerator: cpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
@@ -14,9 +14,10 @@ loss:
   reward_const: 1.
   transition_const: 0.1
   init_class_const: 1.
+  kl_balance: 0.01
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/noobs.pt
+  data_path: ${experiment_cwd}/data/obstacles.pt
   batch_size: 128
   num_workers: 4
   train_split: 0.8
@@ -25,17 +26,17 @@ data:
   shuffle: True  
   n_reward_samples: 5
   n_options: ${model.n_options}
-  n_out_feats: 4
+  n_out_feats: 20
   state_dim : 4
   obs_type: simple
   gamma: 0.99
 model:
   n_options: 4
-  obs_dims: 4
+  obs_dims: ${data.n_out_feats}
   latent_dim: 2
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
-  transition: ${loadcfg:${experiment_cwd}/config/models/transition_mlp.yaml}
+  transition: ${loadcfg:${experiment_cwd}/config/models/transition_iaf.yaml}
   init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
   reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
   gamma: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
