added vae tests

--- a/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
@@ -4,10 +4,10 @@ features:
   output_dim: ${eval:${model.obs_dims}*2}
   hidden_dims:
   - 64
-  activation: relu
+  activation: gelu
 dist:
   type: spherical_gaussian
   output_dim: ${model.obs_dims}
   input_dim: ${model.decoder.features.output_dim}
-  min_std: 1e-10
+  min_std: 0.001
   max_std: 10000
