--- a/experiments/vae/config/config.yaml
+++ b/experiments/vae/config/config.yaml
@@ -1,18 +1,18 @@
 # Config file for Pinball environment
 # Full State observation
 # Gridworld abstraction
-experiment_cwd: 'experiments/pb_no_obs/fullstate'
+experiment_cwd: 'experiments/vae'
 lr: 3e-5
 batch_size: 64
 epochs: 50
-accelerator: gpu
+accelerator: cpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
-  grounding_const: 1. #99.03164077159823
-  kl_const: 1. #0.3589425248337221
+  grounding_const: 1. 
+  kl_const: 1.
   reward_const: 0.0
-  transition_const: 0. #5.263095635338799
+  transition_const: 0. 
   init_class_const: 0.0
   kl_balance: 0.
   n_samples: 1
@@ -36,7 +36,3 @@ model:
   latent_dim: 2
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
-  transition: ${loadcfg:${experiment_cwd}/config/models/transition_mlp.yaml}
-  init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
-  reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
-  gamma: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
