--- a/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
@@ -3,11 +3,11 @@ features:
   input_dim: ${model.obs_dims}
   output_dim: ${eval:${model.latent_dim} * 2}
   hidden_dims:
-  - 128
+  - 64
   activation: gelu
 dist:
   type: diag_gaussian
   output_dim: ${model.latent_dim}
   input_dim: ${model.encoder.features.output_dim}
-  min_std: 1.0e-15
+  min_std: 0.001
   max_std: 100000
