vae loss re-fix?

--- a/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/decoder_mlp.yaml
@@ -4,7 +4,7 @@ features:
   output_dim: ${eval:${model.obs_dims}*2}
   hidden_dims:
   - 64
-  activation: gelu
+  activation: relu
 dist:
   type: spherical_gaussian
   output_dim: ${model.obs_dims}
