--- a/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_no_obs/fullstate/config/models/encoder_mlp.yaml
@@ -4,7 +4,7 @@ features:
   output_dim: ${eval:${model.latent_dim} * 2}
   hidden_dims:
   - 64
-  activation: gelu
+  activation: relu
 dist:
   type: diag_gaussian
   output_dim: ${model.latent_dim}
