--- a/experiments/pb_no_obs/fullstate/config/config.yaml
+++ b/experiments/pb_no_obs/fullstate/config/config.yaml
@@ -17,7 +17,7 @@ loss:
   kl_balance: 0.1
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/noobs.pt
+  data_path: ${experiment_cwd}/data/noobs_t.pt
   batch_size: ${batch_size}
   num_workers: 1
   train_split: 0.8
