--- a/experiments/pb_obstacles/fullstate/config/config.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config.yaml
@@ -1,31 +1,38 @@
 # Config file for Pinball environment
 # Full State observation
 # Gridworld abstraction
-experiment_cwd: 'experiments/pb_no_obs/fullstate'
-lr: 1e-4
+experiment_cwd: 'experiments/pb_obstacles/fullstate'
+lr: 0.005351915416531251
 batch_size: 128
-epochs: 10
+epochs: 30
 accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
-  grounding_const: 10
-  kl_const:  0.1
-  reward_const: 1.
-  transition_const: 0.1
-  init_class_const: 1.
-  n_samples: 1
+    grounding_const: 88.49331937938962
+    kl_const: 1.0182804339500624
+    reward_const: 0.0
+    transition_const: 7.063354524667056
+    init_class_const: 0.0
+    kl_balance: 0.2555698429255569
+    n_samples: 1
 data:
   data_path: ${experiment_cwd}/data/obstacles.pt
-  batch_size: 32
+  batch_size: 128
   num_workers: 4
-  train_split: 0.9
+  train_split: 0.8
   val_split: 0.1
-  test_split: 0.
+  test_split: 0.1
   shuffle: True  
+  n_reward_samples: 5
+  n_options: ${model.n_options}
+  n_out_feats: 4
+  state_dim : 4
+  obs_type: simple
+  gamma: 0.99
 model:
   n_options: 4
-  obs_dims: 4
+  obs_dims: ${data.n_out_feats}
   latent_dim: 2
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
