--- a/experiments/pb_no_obs/fullstate/config/config.yaml
+++ b/experiments/pb_no_obs/fullstate/config/config.yaml
@@ -9,15 +9,15 @@ accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
-  grounding_const: 0.20833333550749766
-  kl_const: 85.34459562691943
-  reward_const: 0.0
-  transition_const: 36.714444967297894
+  grounding_const: 1.
+  kl_const: 1.
+  transition_const: 1
   init_class_const: 0.0
   kl_balance: 0.0
+  reward_const: 0.0
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/noobs_t.pt
+  data_path: ${experiment_cwd}/data/noobs.pt
   batch_size: ${batch_size}
   num_workers: 1
   train_split: 0.8
@@ -34,7 +34,7 @@ model:
   n_options: 4
   obs_dims: 4
   latent_dim: 2
-  encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp_det.yaml}
+  encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
   transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
   init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
