--- a/experiments/pb_no_obs/fullstate/config/infomax_cfg.yaml
+++ b/experiments/pb_no_obs/fullstate/config/infomax_cfg.yaml
@@ -2,7 +2,7 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_no_obs/fullstate'
-lr: 0.0009996863205559922
+lr: 1e-5
 batch_size: 128
 epochs: 200
 accelerator: gpu
@@ -10,12 +10,12 @@ devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
   grounding_const: 1.
-  kl_const: .01
+  kl_const: .001
   transition_const: 1
   kl_balance: 0.0
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/noobs.pt
+  data_path: ${experiment_cwd}/data/noobs_t.pt
   batch_size: ${batch_size}
   num_workers: 1
   train_split: 0.8
