--- a/experiments/pb_no_obs/fullstate/config/infomax_cfg.yaml
+++ b/experiments/pb_no_obs/fullstate/config/infomax_cfg.yaml
@@ -2,9 +2,9 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_no_obs/fullstate'
-lr: 1e-5
+lr: 1e-3
 batch_size: 128
-epochs: 200
+epochs: 50
 accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
@@ -12,6 +12,8 @@ loss:
   grounding_const: 1.
   kl_const: 1
   transition_const: 1
+  reward_const: 1
+  tau_const: 1
   kl_balance: 0.0
   n_samples: 1
 data:
@@ -39,4 +41,4 @@ model:
   transition_s: ${loadcfg:${experiment_cwd}/config/models/transition_s_mlp.yaml}
   init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
   reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
-  gamma: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
+  tau: ${loadcfg:${experiment_cwd}/config/models/tau_mlp.yaml}
