--- a/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/encoder_mlp.yaml
@@ -1,14 +1,9 @@
 features:
   type: mlp
   input_dim: ${model.obs_dims}
-  output_dim: 64
-  hidden_dims:
-  - 128
-  - 64
-  activation: gelu
-dist:
-  type: diag_gaussian
-  input_dim: ${model.encoder.features.output_dim}
   output_dim: ${model.latent_dim}
-  min_std: 1.0e-06
-  max_std: 0.5
+  hidden_dims:
+  - 64
+  activation: relu
+dist:
+  type: deterministic
