--- a/experiments/pb_obstacles/fullstate/config/infomax_cfg.yaml
+++ b/experiments/pb_obstacles/fullstate/config/infomax_cfg.yaml
@@ -26,14 +26,14 @@ data:
   shuffle: True  
   n_reward_samples: 5
   n_options: ${model.n_options}
-  n_out_feats: 4
+  n_out_feats: 10
   state_dim : 4
   obs_type: simple
   gamma: 0.99
 model:
   n_options: 4
-  obs_dims: 4
-  latent_dim: 2
+  obs_dims: ${data.n_out_feats}
+  latent_dim: 4
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
   transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
