--- a/experiments/pb_obstacles/fullstate/config/models/decoder_mlp.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/decoder_mlp.yaml
@@ -3,12 +3,13 @@ features:
   input_dim: ${model.latent_dim}
   output_dim: 64
   hidden_dims:
-  - 128
   - 64
-  activation: gelu
+  - 64
+  - 64
+  activation: relu
 dist:
   type: diag_gaussian
   input_dim: ${model.decoder.features.output_dim}
   output_dim: ${model.obs_dims}
   min_std: 1e-6
-  max_std: 0.5
+  max_std: 1000
