--- a/experiments/pb_obstacles/pixel/config/config.yaml
+++ b/experiments/pb_obstacles/pixel/config/config.yaml
@@ -2,7 +2,7 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_obstacles/pixel'
-lr: 3e-4
+lr: 7e-4
 batch_size: 64
 epochs: 50
 accelerator: gpu
@@ -10,8 +10,8 @@ devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
   grounding_const: 1.
-  kl_const: 1
-  transition_const: 1
+  kl_const: 0.
+  transition_const: 0.1
   reward_const: 1
   tau_const: 1.
   initset_const: 0.
@@ -20,9 +20,9 @@ data:
   data_path: ${experiment_cwd}/data/simple_v1.zip
   batch_size: ${batch_size}
   num_workers: 1
-  train_split: 0.5
+  train_split: 0.8
   val_split: 0.1
-  test_split: 0.4
+  test_split: 0.1
   shuffle: True  
   n_reward_samples: 5
   n_options: ${model.n_options}
@@ -33,7 +33,7 @@ data:
 model:
   n_options: 4
   obs_dims: 4
-  latent_dim: 10
+  latent_dim: 100
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_residual.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_pixelcnn.yaml}
   transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
