--- a/experiments/pb_obstacles/pixel/config/config.yaml
+++ b/experiments/pb_obstacles/pixel/config/config.yaml
@@ -2,7 +2,7 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_obstacles/pixel'
-lr: 7e-4
+lr: 2e-4
 batch_size: 64
 epochs: 50
 accelerator: gpu
@@ -17,7 +17,7 @@ loss:
   initset_const: 0.
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple_v1.zip
+  data_path: ${experiment_cwd}/data/simple-25.zip
   batch_size: ${batch_size}
   num_workers: 1
   train_split: 0.8
