--- a/experiments/pb_obstacles/pixel/config/config.yaml
+++ b/experiments/pb_obstacles/pixel/config/config.yaml
@@ -3,15 +3,15 @@
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_obstacles/pixel'
 lr: 2e-4
-batch_size: 64
+batch_size: 32
 epochs: 50
 accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
   grounding_const: 1.
-  kl_const: 0.
-  transition_const: 0.1
+  kl_const: 1.
+  transition_const: .1
   reward_const: 1
   tau_const: 1.
   initset_const: 0.
@@ -19,7 +19,7 @@ loss:
 data:
   data_path: ${experiment_cwd}/data/simple-25.zip
   batch_size: ${batch_size}
-  num_workers: 1
+  num_workers: 0
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
@@ -33,7 +33,7 @@ data:
 model:
   n_options: 4
   obs_dims: 4
-  latent_dim: 100
+  latent_dim: 10
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_residual.yaml}
   decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_pixelcnn.yaml}
   transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
