--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -2,31 +2,41 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: 'experiments/pb_obstacles/fullstate'
-lr: 1e-4
+seed: 0
+optimizer:
+  type: 'adam'
+  params:
+    lr: 3e-5
+scheduler:
+  type: 'linear_scheduler'
+  params:
+    start_factor: 1.
+    end_factor: 1.
+    total_iters: 1.
 batch_size: 128
-epochs: 10
-accelerator: cpu
+epochs: 50
+accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
-  grounding_const: 10
-  kl_const:  0.1
-  reward_const: 1.
-  transition_const: 0.1
-  init_class_const: 1.
-  kl_balance: 0.01
+  grounding_const: 1.
+  kl_const: 1
+  transition_const: 1
+  reward_const: 1
+  tau_const: 1.
+  initset_const: 1.
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/obstacles.pt
-  batch_size: 128
-  num_workers: 4
+  data_path: ${experiment_cwd}/data/simple_v1.zip
+  batch_size: ${batch_size}
+  num_workers: 1
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
   shuffle: True  
   n_reward_samples: 5
   n_options: ${model.n_options}
-  n_out_feats: 20
+  n_out_feats: 25
   state_dim : 4
   obs_type: simple
   gamma: 0.99
@@ -35,8 +45,8 @@ model:
   obs_dims: ${data.n_out_feats}
   latent_dim: 2
   encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
-  decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp.yaml}
-  transition: ${loadcfg:${experiment_cwd}/config/models/transition_iaf.yaml}
+  decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_maf.yaml}
+  transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
   init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
   reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
-  gamma: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
+  tau: ${loadcfg:${experiment_cwd}/config/models/tau_mlp.yaml}
