--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -24,7 +24,7 @@ loss:
   transition_const: 1
   reward_const: 1
   tau_const: 1.
-  initset_const: 1.
+  initset_const: 0.1
   n_samples: 1
 data:
   data_path: ${experiment_cwd}/data/simple_v1.zip
