--- a/experiments/pb_obstacles/fullstate/config/models/init_class_mlp.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/init_class_mlp.yaml
@@ -1,5 +1,7 @@
 type: mlp
 input_dim: ${model.latent_dim}
 output_dim: ${model.n_options}
-hidden_dims: [128, 128, 128]
-activation: gelu
+hidden_dims:
+  - 1024
+  - 512
+activation: relu
