--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -40,6 +40,8 @@ data:
   state_dim : 4
   obs_type: simple
   gamma: 0.99
+  noise_level: 0.01
+  linear_transform: True
 model:
   n_options: 4
   obs_dims: ${data.n_out_feats}
