saving lintransform as part of experiment output

--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -28,6 +28,7 @@ loss:
   n_samples: 1
 data:
   data_path: ${experiment_cwd}/data/simple_v1.zip
+  save_path: ${save_path}
   batch_size: ${batch_size}
   num_workers: 1
   train_split: 0.8
