--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -21,13 +21,13 @@ save_path: ${experiment_cwd}/mdps
 loss:
   grounding_const: 1.
   kl_const: 1
-  transition_const: 1
+  transition_const: 0.1
   reward_const: 1
   tau_const: 1.
   initset_const: 1
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple_v1.zip
+  data_path: ${experiment_cwd}/data/simple-v1.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
   num_workers: 1
@@ -41,8 +41,8 @@ data:
   state_dim : 4
   obs_type: simple
   gamma: 0.99
-  noise_level: 0.01
-  noise_dim: 2
+  noise_level: 0.0
+  noise_dim: 0
   ar_coeff: 0.9
   linear_transform: True
 model:
