--- a/experiments/pb_obstacles/fullstate/config/config_maf.yaml
+++ b/experiments/pb_obstacles/fullstate/config/config_maf.yaml
@@ -44,7 +44,7 @@ data:
   noise_level: 0.0
   noise_dim: 0
   ar_coeff: 0.9
-  linear_transform: True
+  linear_transform: False
 model:
   n_options: 4
   obs_dims: ${data.n_out_feats}
