--- a/experiments/pb_obstacles/pixel/config/config.yaml
+++ b/experiments/pb_obstacles/pixel/config/config.yaml
@@ -9,11 +9,11 @@ scheduler:
   type: 'linear_scheduler'
   params:
     start_factor: 1.
-    end_factor: 0.1
+    end_factor: 1.
     total_iters: 750
 seed: 0
 batch_size: 128
-epochs: 100
+epochs: 1000
 accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
@@ -23,10 +23,10 @@ loss:
   transition_const: 0.01
   reward_const: 1
   tau_const: 1.
-  initset_const: 0.
+  initset_const: 1.
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple-25.zip
+  data_path: ${experiment_cwd}/data/simple-v1.zip
   batch_size: ${batch_size}
   num_workers: 0
   train_split: 0.8
@@ -39,6 +39,10 @@ data:
   state_dim : 4
   obs_type: pixels
   gamma: 0.99
+  linear_transform: False
+  noise_dim: 0
+  noise_level: 0.
+  ar_coeff: 0.
 model:
   n_options: 4
   obs_dims: 4
