--- a/experiments/pb_obstacles/fullstate/config/models/decoder_mlp_critic.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/decoder_mlp_critic.yaml
@@ -1,8 +1,9 @@
-features:
-  type: mlp
-  input_dim: ${eval:${model.obs_dims}+${model.latent_dim}}
-  output_dim: 1
-  hidden_dims:
-  - 64
-  - 64
-  activation: relu
+
+type: mlp_critic
+input_dim: ${model.obs_dims}
+latent_dim: ${model.latent_dim}
+output_dim: 1
+hidden_dims:
+- 64
+- 64
+activation: relu
