--- a/experiments/pb_obstacles/pixel/config/tpc_cfg_critic.yaml
+++ b/experiments/pb_obstacles/pixel/config/tpc_cfg_critic.yaml
@@ -6,14 +6,14 @@ seed: 0
 optimizer:
   type: 'adam'
   params:
-    lr: 1e-4
+    lr: 2e-4
 scheduler:
   type: 'linear_scheduler'
   params:
     start_factor: 1.
     end_factor: 1.
     total_iters: 1.
-batch_size: 128 
+batch_size: 64 
 epochs: 200
 accelerator: gpu
 devices: 1
@@ -28,7 +28,7 @@ loss:
   initset_const: 1
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple-25.zip
+  data_path: ${experiment_cwd}/data/simple-v1.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
   num_workers: 0
