make mdp with critic grounding

--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
@@ -15,7 +15,7 @@ scheduler:
     total_iters: 1.
 batch_size: 128 
 epochs: 200
-accelerator: gpu
+accelerator: cpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
