--- a/experiments/pb_obstacles/fullstate/config/models/transition_gaussian.yaml
+++ b/experiments/pb_obstacles/fullstate/config/models/transition_gaussian.yaml
@@ -2,7 +2,7 @@ features:
   type: dynamics_mlp
   latent_dim: ${model.latent_dim}
   n_options: ${model.n_options}
-  hidden_dims: [128]
+  hidden_dims: [128, 128]
   activation: relu
 dist:
   type: diag_gaussian
